--- a/QuanLyTourDuLich/QuanLyTourDuLich.csproj
+++ b/QuanLyTourDuLich/QuanLyTourDuLich.csproj
@@ -22,6 +22,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="QuanLyDoan_Sua.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
