--- a/WebForm/WebForm.csproj
+++ b/WebForm/WebForm.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\DTO\DTO.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Forms\" />
+  </ItemGroup>
+
 </Project>
